--- a/project/index.html
+++ b/project/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Urban Forge - Expert Construction, Architecture, and Interior Design Services">
     <title>Urban Forge | Construction, Architecture & Interior Design</title>
+
+    <link id="favicon" rel="icon" href="./src/assets/logo.png" type="image/png">
+    <script>
+      const isDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+      const favicon = document.getElementById('favicon');
+      favicon.href = isDark ? './src/assets/logoWhite.png' : './src/assets/logo.png';
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
