--- a/project/index.html
+++ b/project/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Urban Forge - Expert Construction, Architecture, and Interior Design Services">
     <title>Urban Forge | Construction, Architecture & Interior Design</title>
 
-    <link id="favicon" rel="icon" href="./src/assets/logo.png" type="image/png">
+    <link id="favicon" rel="icon" href="/logo.png" type="image/png">
     <script>
       const isDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
       const favicon = document.getElementById('favicon');
-      favicon.href = isDark ? './src/assets/logoWhite.png' : './src/assets/logo.png';
+      favicon.href = isDark ? '/logoWhite.png' : '/logo.png';
     </script>
 
   </head>
